# project_vis_forestsim

./: .gitignore  AGENTS.md  ASSETS.md  CLAUDE.md  Dockerfile  MODULE_TODO.md  NEXT_STEPS.md  PIPELINE_MAP.md  PRD.md  README.md  anima_module.yaml  docker-compose.serve.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
configs/: default.toml
configs/benchmarks/: paper_table.toml
docker/: Dockerfile  docker-compose.yml
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2-integration.md  PRD-07-production.md  README.md
reports/: forestsim_benchmark_template.md
scripts/: download_data.sh
src/anima_kodama/: __init__.py  device.py  version.py
src/anima_vis_forestsim/: __init__.py  config.py  device.py  export.py  runtime_checks.py  serve.py
src/anima_vis_forestsim/api/: __init__.py  app.py  schemas.py
src/anima_vis_forestsim/eval/: __init__.py  metrics.py  report.py  (+1 more)
tasks/: PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0104.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0204.md  PRD-0301.md  PRD-0302.md  PRD-0303.md  PRD-0304.md  PRD-0401.md  PRD-0402.md  PRD-0403.md  PRD-0404.md  PRD-0501.md  PRD-0502.md  PRD-0503.md  PRD-0601.md  PRD-0602.md  PRD-0603.md  PRD-0701.md  PRD-0702.md  PRD-0703.md
tests/: test_api.py  test_api_schemas.py  test_artifact_manifest.py  test_benchmark_configs.py  test_checkpoints.py  test_cli.py  test_config.py  test_eval_runner.py  test_family_specs.py  test_imports.py  test_manifest.py  test_metrics.py  test_model_registry.py  test_ontology.py  test_overlay.py  test_predictor.py  test_runtime_fallbacks.py  test_table_i_report.py
tests/fixtures/: sparse_classes_mask.npy
(+9 files in other folders)
